<resources>
    <string name="app_name">Papeleria</string>

    <string name="hint_id">ID</string>
    <string name="hint_name">Nombre Producto</string>
    <string name="hint_price">Precio</string>
    <string name="hint_description">Descripcion</string>
    <string name="hint_quantity">Cantidad</string>
    <string name="btn_add_product">Agregar</string>
    <string name="btn_show_products">Mostrar Productos</string>
    <string name="tv_database">Productos</string>
    <!-- String del layout de los items -->
    <string name="item_button_add">Editar</string>
    <string name="item_button_delete">Eliminar</string>
    <string name="btn_manage_products">Productos</string>
</resources>